# Loan_Shark

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  Loan_Shark_Presentation.pptx  README.md  agent_config.yaml.example  api.py  app.py  band_client.py  demo_replay.py  generate_pdf.py  package.json  preflight.py  pyproject.toml  render.yaml  requirements.txt  run_all.py
.streamlit/: config.toml
agents/: __init__.py  base.py
agents/communication/: agent.py
agents/compliance/: agent.py
agents/credit/: agent.py
agents/decision/: agent.py
agents/document/: agent.py
agents/fraud/: agent.py
agents/intake/: agent.py
agents/pricing/: agent.py
agents/risk/: agent.py
docs/: 00_MASTER_PLAN.md  01_BAND_INTEGRATION.md  02_TEAMMATE_GUIDE_ANTIGRAVITY.md  DEMO_SCRIPT.md
docs/specs/: spec_audit_trail.md  spec_demo_and_pitch.md  spec_deploy.md  spec_document_upload.md  spec_human_gate_plus.md
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: Applications.jsx  AuditLogs.jsx  Login.jsx  Overview.jsx  Pipeline.jsx  Settings.jsx
schema/: messages.py
shared/: __init__.py  parsing.py
